[package]
name = "chess"
version = "0.1.0"
authors = ["Anton Gusev <uartman@mail.ru>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gtk = { version = "0.2", package = "gtk4" }

[dependencies.cairo-rs]
features = ["png"]